# flexis

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  runtests.py  tox.ini
app/: admin.py  apps.py  models.py  urls.py  views.py
app/conf/: asgi.py  settings.py
flexis/: __init__.py  apps.py  lib.py
flexis/migrations/: 0001_initial.py
tests/: test_standard_view.py
