[tool.poetry]
name = "django-flexis"
packages = [
    { include = "flexis" },
    { include = "flexis/**/*.py" },
]
version = "0.1.0"
description = "Flexible path key-value JSON response"
authors = ["saequus <slava@spetsyian.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0.1"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
